--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>EnLivenAnimation Website</h1>
+    <canvas id="canvas" width="150" height="160"></canvas>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
