--- a/pixi.html
+++ b/pixi.html
@@ -6,16 +6,8 @@
 </head>
   <script src="pixi.min.js"></script>
 <body>
-  <script type="text/javascript">
-    let type = "WebGL"
-    if(!PIXI.utils.isWebGLSupported()){
-      type = "canvas"
-    }
-    PIXI.utils.sayHello(type)
-    let app = new PIXI.Application({width: 256, height: 256});
-
-//Add the canvas that Pixi automatically created for you to the HTML document
-document.body.appendChild(app.view);
+  <script src = "test.js" type="text/javascript">
+ 
   </script>
 </body>
 </html>
