Set up pixi environment

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 <script src="pixi/pixi.min.js"></script>
 
 <body>
-    <script type="text/javascript">
-        let type = "WebGL"
-        if (!PIXI.utils.isWebGLSupported()) {
-            type = "canvas"
-        }
+    <h1>EnLivenAnimation</h1>
 
-        PIXI.utils.sayHello(type)
+    <script src="main.js">
     </script>
 </body>
 
