Update from local branch with all timeline, moving, displaying code

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>EnLiven Animation</title>
+    <script src="pixi/pixi.min.js"></script>  
 </head>
-
 <body>
-    <h1>EnLivenAnimation Website</h1>
+    <h1>EnLiven Animation</h1>
 
+    <script src="input.js"></script>
+    <script src="drag.js"></script>
+    <script src="toggle.js"></script>
+    <script src="display.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="tmp.js"></script> -->
+    <!-- <script src="timeline.js"></script> -->
 </body>
-
 </html>
