updating the branch

--- a/Bones.html
+++ b/Bones.html
@@ -1,68 +1,15 @@
 <!DOCTYPE html>
 <html>
-<style>
-    .styled-table {
-        border-collapse: collapse;
-        margin: 25px 0;
-        font-size: 0.9em;
-        font-family: sans-serif;
-        min-width: 400px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    }
-    .styled-table thead tr {
-        background-color: #009879;
-        color: #ffffff;
-        text-align: left;
-    }
-    .styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-.styled-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
-}
-</style>
-<head>
-    <meta charset="utf-8">
-    <title>Hello World</title>
-</head>
-<script src="pixi/pixi.min.js"></script>
-<body>
-    <h1>EnLivenAnimation</h1>
-    <table class="styled-table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Points</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Dom</td>
-                <td>6000</td>
-            </tr>
-            <tr class="active-row">
-                <td>Melissa</td>
-                <td>5150</td>
-            </tr>
-            <!-- and so on... -->
-        </tbody>
-    </table>
-
-
-    <script src="bones.js"></script>
-</body>
-
+    <head>
+        <style>
+            body {
+                text-align: center;
+            }
+        </style>
+    </head>  
+    <body>
+        <script src="pixi/pixi.min.js"></script>
+        <script src="viewport.js"></script>
+        <script src = "wj.js"></script>
+    </body>
 </html>
