--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <div id="timeline" class=panel>
       <div id="timeline-buttons">
         <button id="play" type="button" onclick="play();"><i class="fas fa-play"></i></button>
-        <button id="add" type="button" onclick="addKeyframe();"><i class="fas fa-plus"></i></button> 
+        <button id="add" type="button" onclick="addKeyframe();"><i class="fas fa-plus"></i></button>
+        <button id="delete" type="button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
         <span></span>
         <div id="slider-container">
           <label id="slider-label" for="slider">TWEENS</label>
