--- a/index.html
+++ b/index.html
@@ -81,10 +81,15 @@
     <!-- TIMELINE PANEL -->
     <div id="timeline" class="panel">
       <button class="timeline-button" type="button" onclick="play();"><i class="fas fa-play"></i></button>
+      <button class="timeline-button" type="button" onclick="pause();"><i class="fas fa-pause"></i></button>
       <button class="timeline-button" type="button" onclick="addKeyframe();"><i class="fas fa-plus"></i></button>
       <button class="timeline-button" type="button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
       <button class="timeline-button" type="button" onclick="editKeyframe();"><i class="fas fa-edit"></i></button>
       <span></span>
+      <div id="checkbox-container">
+        <label id="loop-label" for="loop"><i class="fas fa-undo-alt"></i></label>
+        <input id="loop" type="checkbox" name="loop">
+      </div>
       <div id="slider-container">
         <label id="slider-label" for="slider">TWEENS</label>
         <input id="slider" type="range" name="slider" min="0" max="30" value="20">
