--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <button class="timeline-button" type="button" onclick="pause();"><i class="fas fa-pause"></i></button>
       <button class="timeline-button" type="button" onclick="addKeyframe();"><i class="fas fa-plus"></i></button>
       <button class="timeline-button" type="button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
-      <button class="timeline-button" type="button" onclick="editKeyframe();"><i class="fas fa-edit"></i></button>
+      <button class="timeline-button" type="button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
       <button id="loop" class="loop-disabled" type="button" onclick="toggleLooping();"><i class="fas fa-undo-alt"></i></button>
       <div id="slider-container">
