Temporarily removed homepage, New File button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EnLiven</title>
+  <title>EnLiven Animate</title>
   <link rel="shortcut icon" type="image/jpg" href="res/icons/favicon.ico"/>
 
   <!-- STYLESHEET -->
@@ -29,11 +29,11 @@
   <div id="grid">
     <!-- TOP NAVBAR -->
     <div id="navbar">
-      <a id="home" class="navbar-button" href="#home"><i class="fas fa-leaf"></i></a>
+      <a id="home" class="navbar-button" href="home.html"><i class="fas fa-leaf"></i></a>
       <div class="dropdown">
         <button onclick="displayDropdown('file-dropdown')" class="navbar-button">File</button>
         <div id="file-dropdown" class="dropdown-content">
-          <a href="#new-file">New File</a>
+          <a href="javascript:location.reload(true)">New File</a>
           <a href="#save">Save</a>
           <a href="#import">Import</a>
           <a href="#export">Export</a>
