Added dropdown for adding sprites

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
           <a href="#pause">Pause</a>
         </div>
       </div>
+      <div class="dropdown">
+        <button onclick="displayDropdown('add-dropdown')" class="navbar-button">Add</button>
+        <div id="add-dropdown" class="dropdown-content">
+          <a href="#circle">Circle</a>
+          <a href="#square">Square</a>
+          <a href="#triangle">Triangle</a>
+          <a href="#human">Human</a>
+        </div>
+      </div>
     </div>
     
     <!-- RELATIONS PANEL -->
