--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     <!-- PROPERTIES PANEL -->
     <div id="properties" class="panel">
-      <p id="x">X</p>
-      <p id="y">Y</p> 
-      <p id="w">W</p>
-      <p id="h">H</p>
-      <p id="r">R</p>
+      <p id="x">X <input type="number" id="xpos" name="xpos" min="1" max="1000"></p>
+      <p id="y">Y <input type="number" id="ypos" name="ypos" min="1" max="1000"></p> 
+      <p id="w">W <input type="number" id="width" name="width" min="1" max="1000"></p>
+      <p id="h">H <input type="number" id="height" name="height" min="1" max="1000"></p>
+      <p id="r">R <input type="number" id="rotation" name="rotation" min="-1000" max="1000"></p>
     </div>
     
     <!-- TIMELINE PANEL -->
