--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="dropdown">
         <button onclick="displayDropdown('add-dropdown')" class="navbar-button">Add</button>
         <div id="add-dropdown" class="dropdown-content">
-          <a href="#circle">Circle</a>
-          <a href="#square">Square</a>
-          <a href="#triangle">Triangle</a>
-          <a href="#human">Human</a>
+          <a onclick="AddCircle()">Circle</a>
+          <a onclick="AddSquare()">Square</a>
+          <a onclick="AddTriangle()">Triangle</a>
+          <a onclick="AddHuman()">Human</a>
         </div>
       </div>
     </div>
