Added add sprite functions

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="dropdown">
         <button onclick="displayDropdown('add-dropdown')" class="navbar-button">Add</button>
         <div id="add-dropdown" class="dropdown-content">
-          <a href="addCircle()">Circle</a>
-          <a href="addSquare()">Square</a>
-          <a href="addTriangle()">Triangle</a>
-          <a href="addHuman()">Human</a>
+          <a href="addCircle();">Circle</a>
+          <a href="addSquare();">Square</a>
+          <a href="addTriangle();">Triangle</a>
+          <a href="addHuman();">Human</a>
         </div>
       </div>
     </div>
