Added add sprite functions

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="dropdown">
         <button onclick="displayDropdown('add-dropdown')" class="navbar-button">Add</button>
         <div id="add-dropdown" class="dropdown-content">
-          <a onclick="addCircle();">Circle</a>
-          <a onclick="addSquare();">Square</a>
-          <a onclick="addTriangle();">Triangle</a>
-          <a onclick="addHuman();">Human</a>
+          <button onclick="addCircle();">Circle</button>
+          <button onclick="addSquare();">Square</button>
+          <button onclick="addTriangle();">Triangle</button>
+          <button onclick="addHuman();">Human</button>
         </div>
       </div>
     </div>
