Added add.js script

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
   <script src="scripts/buttons.js" async></script>
   <script src="scripts/timeline.js" async></script>
   <script src="scripts/input.js" async></script>
+  <script src="scripts/add.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </body>
