Updated importing and exporting frontend

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
           <button onclick="addHuman();">Human</button>
         </div>
       </div>
+
+      <input type="file" id="file-selector" multiple>
     </div>
     
     <!-- RELATIONS PANEL -->
