New delete function

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <button onclick="addHuman();">Human</button>
         </div>
       </div>
+      <button id="delete" type="button" onclick="
+      DeleteSprite();
+      ">Delete</button>
     </div>
     
     <!-- RELATIONS PANEL -->
