--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
       <button class="timeline-button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
       <button id="loop" class="loop-disabled" type="button" onclick="toggleLooping();"><i class="fas fa-undo-alt"></i></button>
+      <div class="slidecontainer">
+        <input type="range" min="0" max="30" value="10" class="slider" id="tweensSlider">
+        <p>Tweens: <span id="tweensValue"></span></p>
+      </div>
       <div id="slider-container">
         <label id="slider-label" for="slider">TWEENS</label>
         <input id="slider" type="range" name="slider" min="0" max="30" value="20">
