--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
     <!-- PROPERTIES PANEL -->
     <div id="properties" class="panel">
-      <p id="x">X <input type="number" id="xpos" name="xpos" min="-100" max="100000"></p>
-      <p id="y">Y <input type="number" id="ypos" name="ypos" min="-100" max="100000"></p> 
-      <p id="w">W <input type="number" id="width" name="width" min="0" max="100000"></p>
-      <p id="h">H <input type="number" id="height" name="height" min="0" max="100000"></p>
-      <p id="r">R <input type="number" id="rotation" name="rotation" min="-100000" max="100000"></p>
+      <p id="x">X</p><input type="number" id="xpos" name="xpos" min="-100" max="100000">
+      <p id="y">Y</p><input type="number" id="ypos" name="ypos" min="-100" max="100000">
+      <p id="w">W</p><input type="number" id="width" name="width" min="0" max="100000">
+      <p id="h">H</p><input type="number" id="height" name="height" min="0" max="100000">
+      <p id="r">R</p><input type="number" id="rotation" name="rotation" min="-100000" max="100000">
     </div>
     
     <!-- TIMELINE PANEL -->
