--- a/home.html
+++ b/home.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/home.css">
-        <title>MainPage</title>
+        <title>EnLiven</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" type="image/jpg" href="res/icons/favicon.png"/>
+        <link rel="shortcut icon" type="image/jpg" href="res/icons/favicon.ico"/>
         <script src="https://kit.fontawesome.com/3d9aefd90b.js" crossorigin="anonymous"></script>
       </head>
     <body>
