--- a/resources.html
+++ b/resources.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EnLiven Resources</title>
     <link rel="stylesheet" href="style/resources.css">
-    <script src=collapsible.js></script>
-    <link rel="shortcut icon" type="image/jpg" href="res/icons/favicon.png"/>
+    <script src="scripts/collapsible.js"></script>
+    <link rel="shortcut icon" type="image/jpg" href="res/icons/favicon.ico"/>
     <script src="https://kit.fontawesome.com/3d9aefd90b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
