made it so putting circle over outline prompts pop up

--- a/Tutorial1.html
+++ b/Tutorial1.html
@@ -111,7 +111,7 @@
 </div>
   <div class="popup">
     <span class="popuptext" id="myPopup">
-        Hello.
+        Welcome to the Squash and Stretch Tutorial. To begin please add a circle and place it over the black circle outline
       <button class="navbar-button" type="button" onclick ="turnOff();">Next</button>
     </span>  
   </div>
