adding stuff for edward

--- a/Tutorial1.html
+++ b/Tutorial1.html
@@ -96,7 +96,7 @@
     <div id="timeline" class="panel">
       <button class="timeline-button" onclick="play();"><i class="fas fa-play"></i></button>
       <button class="timeline-button" onclick="pause();"><i class="fas fa-pause"></i></button>
-      <button class="timeline-button" id = "keyFrame" onclick="addKeyframe();"><i class="fas fa-plus"></i></button>
+      <button class="timeline-button" id = "addButton" onclick="addKeyframePopUp();"><i class="fas fa-plus"></i></button>
       <button class="timeline-button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
       <button class="timeline-button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
