pushing new OUtline Functions

--- a/Tutorial1.html
+++ b/Tutorial1.html
@@ -136,7 +136,8 @@
 </div>
 <div class="popup">
   <span class="popuptext" id="myPopup3">
-    Notice how at this point, the ball has gone from a circular shape into an oval one. This is what we call squishing.
+    Notice how at this point, the ball has gone from a circular shape into an oval one. This is to make it seem as if the ball is falling faster down at this point.
+    This is essentially the squish part of the tutorial.
   <button class="navbar-button" type="button" onclick ="turnOff3();">Next</button>
 </span>  
 </div>
