--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
       <button class="timeline-button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
       <button id="loop" class="loop-disabled" type="button" onclick="toggleLooping();"><i class="fas fa-undo-alt"></i></button>
-      <div id="fpsSlider-container">
+      <div id="fpsSlider-container" style="background-color: #d1e1d1; border-radius: 10px; padding: 10px;">
+        <p style="text-align: justify;">FPS</p>
         <label id="fpsSlider-label" for="slider">FPS</label>
         <input id="fpsSlider" type="range" name="fpsSlider" min="20" max="120" value="60">
       </div>
-      <div id="tweensSlider-container">
+      <div id="tweensSlider-container"style="background-color: #d1e1d1; border-radius: 10px; padding: 10px;" >
+        <p style="text-align: justify;">TWEENS</p>
         <label id="tweensSlider-label" for="slider">TWEENS</label>
         <input id="tweensSlider" type="range" name="tweensSlider" min="0" max="30" value="20">
       </div>
