--- a/home.html
+++ b/home.html
@@ -14,12 +14,15 @@
       </head>
     <body>
         <div id=scroll>
-        <div id="page-division1" >
             <div id="navbar">
                 <a id="home" href="home.html" class="logo"><i class="fas fa-leaf"></i></a>
                 <a href="resources.html">Resources</a>
                 <a href="index.html">Animate</a>
+                <br>
+                <a>Sign Up</a>
+                <a>Log</a>
             </div>
+        <div id="page-division1" >
             <div id="hero">
                 <div class="hero img">
                     <div class="hero-text">
