Onion skins first draft

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="scripts/input.js" async></script>
   <script src="scripts/add.js" async></script>
   <script src="scripts/export.js" async></script>
+  <script src="scripts/onion.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
