--- a/Tutorial1.html
+++ b/Tutorial1.html
@@ -141,6 +141,12 @@
   <button class="navbar-button" type="button" onclick ="turnOff3();">Next</button>
 </span>  
 </div>
+<div class="popup">
+  <span class="popuptext" id="myPopup5">
+    At this point we see that the ball is squashing. This is the second part of the tutorial. This is ideal because 
+  <button class="navbar-button" type="button" onclick ="turnOff5();">Next</button>
+</span>  
+</div>
 </div>
 </body>
 </html>
