--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       <button class="timeline-button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
       <button class="timeline-button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
+      <button id="onion" class="onion-disabled" type="button" onclick="toggleOnionSkins();"><i class="fas fa-onion"></i></button>
       <button id="loop" class="loop-disabled" type="button" onclick="toggleLooping();"><i class="fas fa-undo-alt"></i></button>
       <div id="slider-container">
         <label id="slider-label" for="slider">TWEENS</label>
