i hope we are proud

--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
                     <h1 style="font-size:35px">Principle 1</h2>
                     <p style="font-size:20px">&emsp; The squash and stretch principle is considered the most important of the 12 principles of animation. When applied, it gives your animated characters and objects the illusion of gravity, weight, mass and flexibility. Think about how a bouncing rubber ball may react when tossed into the air: the ball stretches when it travels up and down and squishes when it hits the ground.
                       When using squash and stretch, it's important to keep the object's volume consistent. So when you stretch something it needs to get thinner, and when you squash something it needs to get wider.</p>
-                      <a href="Tutorial1.html" class="button">Try it here</a>
+                      <a href="Tutorial1PART 1.html" class="button">Try it here</a>
                 </div>
                 
                 
