--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="scripts/navbar.js" async></script>
   <script src="scripts/properties.js" async></script>
   <script src="scripts/treeview.js" async></script>
+  <script src="scripts/import.js" async></script>
   <!-- BACKEND SCRIPTS -->
   <script src="scripts/display.js" async></script>
   <script src="scripts/buttons.js" async></script>
@@ -37,8 +38,24 @@
         <button onclick="displayDropdown('file-dropdown')" class="navbar-button">File</button>
         <div id="file-dropdown" class="dropdown-content">
           <a href="javascript:location.reload(true)">New File</a>
-          <label for="file-import" class="custom-file-upload">Import</label>
-          <input type="file" id="file-import" multiple>
+          <!-- Trigger/Open The Modal -->
+          <button id="myBtn">Import</button>
+          <!-- The Modal -->
+          <div id="myModal" class="modal">
+          <!-- Modal content -->
+            <div class="modal-content">
+              <div class="modal-header">
+                <span class="close">&times;</span>
+              </div>
+              <div class="modal-body">
+                <label for="file-import" class="custom-file-upload">Import</label>
+                <input type="file" id="file-import" multiple>
+              </div>
+              <div class="modal-footer">
+                <!-- <h3>Modal Footer</h3> -->
+              </div>
+            </div>
+          </div> 
           <button onclick="exportTL()">Export</button>
         </div>
       </div>
