--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <button class="timeline-button" onclick="deleteKeyframe();"><i class="fas fa-minus"></i></button>
       <button class="timeline-button" onclick="editKeyframe();">REPLACE</button>
       <span></span>
-      <button id="onion" class="onion-disabled" type="button" onclick="toggleOnionSkins();"><i class="fas fa-onion"></i></button>
+      <button id="onion" class="onion-disabled" type="button" onclick="toggleOnionSkins();"><i class="fas fa-ellipsis-h"></i></button>
       <button id="loop" class="loop-disabled" type="button" onclick="toggleLooping();"><i class="fas fa-undo-alt"></i></button>
       <div id="fpsSlider-container" style="background-color: #d1e1d1; border-radius: 10px; padding: 10px;">
         <p style="text-align: justify;">FPS</p>
