border around the canvas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="scripts/add.js" async></script>
   <script src="scripts/export.js" async></script>
   <script src="scripts/onion.js" async></script>
-  <script src="scripts/Parent.js" async></script>
+  <script src="scripts/mousePos.js" async></script>
   <script scr="scripts/background.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
