--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <!-- BACKEND SCRIPTS -->
   <script src="scripts/display.js" async></script>
   <script src="scripts/buttons.js" async></script>
+  <script src="scripts/moving.js" async></script>
+  <script src="scripts/scaling.js" async></script>
+  <script src="scripts/rotating.js" async></script>
+  <script src="scripts/converting.js" async></script>
   <script src="scripts/timeline.js" async></script>
   <script src="scripts/input.js" async></script>
   <script src="scripts/add.js" async></script>
