--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="scripts/add.js" async></script>
   <script src="scripts/export.js" async></script>
   <script src="scripts/onion.js" async></script>
+  <script src="scripts/undo.js" async></script>
   <!-- MAIN SCRIPT -->
   <script src="scripts/main.js" async></script>
 </head>
