--- a/login.html
+++ b/login.html
@@ -15,7 +15,10 @@
         <div id="loginimg">
             <div style="background-image: url('loginimg.jpg');" id="background"></div>
             <div id="login-info">
-                <p style="color:#686868; text-align: left;">Don't have an account? <a style="color:#0030DB">Sign Up</a></p>
+                <div id="loginbar">
+                    <p style="color:#686868; text-align: left;">Don't have an account? <a style="color:#0030DB">Sign Up</a></p>
+                    <a href="newhome.html" style="text-align: right; color:black">Close X</a>
+                </div>
                 <h1 style="text-align: center; font-size: 50px; font-weight: bold; margin-top: 50px;">Login</h1>
                 <button style="border-radius: 30px; margin-top: 10px;">Username/Email</button>
                 <button style="border-radius: 30px; margin-top: 10px;">Password</button>
