--- a/newhome.html
+++ b/newhome.html
@@ -24,7 +24,12 @@
 
         <div style="background-image: url('nature.jpg');" id="hero">
             <div class="hero-text">
-                <h1 style="position:fixed; margin-top: 300px; margin-left: 200px;">Enliven</h1>
+                <br>
+                <div>
+                    <hero style="font-size: 140px; text-align: center;" id="hero1">EnLiven</hero>
+                    <hero style="font-size:30px; text-align: center;" id ="hero2">Bring your creations to life</hero>
+                </div>
+                <br>
             </div>
         </div>
 
