--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,10 @@
         <div id="signupimg">
             <div style="background-image: url('signupimg.jpg');" id="background"></div>
             <div id="signup-info">
-                <p style="color:#686868; text-align: left;">Already have an account? <a style="color:#0030DB">Log In</a></p>
+                <div id="signupbar">
+                    <p style="color:#686868; text-align: left;">Already have an account? <a style="color:#0030DB">Log In</a></p>
+                    <a href="newhome.html" style="text-align: right;">Close X</a>
+                </div>
                 <h1 style="text-align: center; font-size: 50px; font-weight: bold; margin-top: 50px;">Create Account</h1>
                 <button style="border-radius: 30px; margin-top: 10px;">Email address</button>
                 <button style="border-radius: 30px; margin-top: 10px;">Full name</button>
