--- a/newhome.html
+++ b/newhome.html
@@ -27,13 +27,38 @@
                 <br>
                 <div>
                     <hero style="font-size: 140px; text-align: center;" id="hero1">EnLiven</hero>
-                    <hero style="font-size:30px; text-align: center;" id ="hero2">Bring your creations to life</hero>
+                    <hero2 style="font-size:30px; text-align: center; color: teal;" id ="hero2">Bring your creations to life</hero2>
                 </div>
                 <br>
             </div>
         </div>
 
         <div id="intro">
+            <div class="description">
+                <br>
+                <h1>01</h1>
+                <h2>EASY</h2>
+                <p>EnLiven has an user interface that is extremely user-friendly and tutorials to guide people. </p>
+                <br>
+            </div>
+            <div class="description">
+                <br>
+                <h1>02</h1>
+                <h2>CONVENIENT</h2>
+                <p>EnLiven is and will always be a free website that is accessible to anyone.</p>
+                <p>hello</p>
+                <button class='intro-button'>Get Started!</button>    
+            </div>
+            <div class="description">
+                <br>
+                <h1>03</h1>
+                <h2>FREE</h2>
+                <p>EnLiven is and will always be a free website that is accessible to anyone. </p>
+                <br>
+            </div>
+        </div>
+
+        <div id="intro2">
             <div class="description">
                 <br>
                 <h1>01</h1>
